[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/robot/sprites/robot_cook_bag_back.png" type="Texture" id=1]
[ext_resource path="res://entities/robot/sprites/robot_cook_bag_front.png" type="Texture" id=2]
[ext_resource path="res://entities/robot/sprites/robot_cook_bag__top.png" type="Texture" id=3]
[ext_resource path="res://entities/robot/sprites/robot.png" type="Texture" id=4]
[ext_resource path="res://entities/robot/robot_cook/robot_cook.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.6137
height = 30.5747

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="robot_cook" type="KinematicBody2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, -13 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 15

[node name="bag" type="Node2D" parent="."]
position = Vector2( 19, -96 )

[node name="bag_back" type="Sprite" parent="bag"]
position = Vector2( -16, -112 )
texture = ExtResource( 1 )

[node name="spot_1" type="Node2D" parent="bag"]
position = Vector2( -16, -112 )

[node name="spot_2" type="Node2D" parent="bag"]
position = Vector2( 24, -120 )

[node name="spot_3" type="Node2D" parent="bag"]
position = Vector2( -56, -120 )

[node name="container" type="Node2D" parent="bag"]
position = Vector2( -16, -112 )

[node name="bag_front" type="Sprite" parent="bag"]
position = Vector2( -16, -112 )
texture = ExtResource( 2 )

[node name="top" type="Sprite" parent="bag"]
visible = false
position = Vector2( -16, -112 )
texture = ExtResource( 3 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -76 )
frames = SubResource( 2 )
animation = "walk"

[node name="robot_action" type="TextureButton" parent="."]
margin_left = -34.0
margin_top = -150.0
margin_right = 40.0
margin_bottom = -81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="cook_timer" type="Timer" parent="."]
[connection signal="pressed" from="robot_action" to="." method="_on_robot_action_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="cook_timer" to="." method="_on_cook_timer_timeout"]
